# flutter_rust_metal_gpu

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/rust_video/: MainActivity.kt
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rs_devices/: Cargo.toml  README.md
rs_devices/rs_devices.xcodeproj/: project.pbxproj
rs_devices/rs_devices.xcodeproj/xcuserdata/lyledean.xcuserdatad/xcschemes/: xcschememanagement.plist
rs_devices/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  shaders.air  shaders.metallib
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
